# libclix

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
3rd/: gfc
libclix.xcodeproj/: project.pbxproj
libclix.xcodeproj/project.xcworkspace/xcuserdata/christian.xcuserdatad/: UserInterfaceState.xcuserstate
libclix.xcodeproj/project.xcworkspace/xcuserdata/christian.xcuserdatad/Bookmarks/: bookmarks.plist
libclix.xcodeproj/xcuserdata/christian.xcuserdatad/xcschemes/: libclix.xcscheme  xcschememanagement.plist
src/: clix-cv.cpp  clix-cv.hpp  clix-err.h  clix-fmt.cpp  clix-fmt.hpp  clix-mac.h  clix-mac.mm  clix-ocr.cpp  clix-ocr.hpp  clix-t.hpp  clix.hpp  stb_image.h
test/: Makefile  test_clix_cv.cpp  test_clix_mac.mm  test_clix_ocr.cpp
